Fix link layout issue

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -79,7 +79,6 @@ footer {
       padding: 5px 1px;
 
       float:left;
-      width: 200px;
       height: 22px;
       line-height:24px;
     }
